<package>
  <name>rviz_robot_plugins</name>
  <version>0.10.3</version>
  <description>
     The rviz_robot_plugins package
  </description>
  <maintainer email="markuslamprecht@live.de">Markus Lamprecht</maintainer>
  <license>BSD</license>

  <url>https://simact.de/about_me</url>
  <author>Markus Lamprecht</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
